# speedtest

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  PLATFORM_SUPPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_START.md  README.md  VERSION  build-test-unix.sh  build-test-windows.bat  build.rs  docker-compose.yml
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  release.yml
examples/: README.md  debug-xml.rs  json_output.rs  server_selection.rs  simple.rs  with_progress.rs
src/: download.rs  error.rs  http.rs  latency.rs  lib.rs  main.rs  models.rs  share.rs  speedtest.rs  types.rs  upload.rs  utils.rs
