bin = [
    { name = "speedtest", path = "src/bin/speedtest.rs" },
]

[package]
name = "speedtest"
version = "0.1.1"
edition = "2021"
authors = [
    "Hadi Cahyadi <cumulus13@gmail.com>",
]
description = "Speedtest-cli for testing internet bandwidth"
license = "Apache-2.0"
repository = "https://github.com/cumulus13/speedtest"
keywords = [
    "speedtest",
    "network",
    "bandwidth",
    "cli",
]
categories = [
    "command-line-utilities",
    "network-programming",
]
rust-version = "1.70"

[dependencies]
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
indicatif = "0.17"
csv = "1.3"
rayon = "1.8"
lazy_static = "1.4"
url = "2.5"
md5 = "0.7"

[dependencies.reqwest]
version = "0.11"
features = [
    "blocking",
    "gzip",
    "json",
]
default-features = false

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
]
default-features = false

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.quick-xml]
version = "0.31"
features = [
    "serialize",
]

[dependencies.clap]
version = "4.4"
features = [
    "derive",
]

[dependencies.chrono]
version = "0.4"
features = [
    "serde",
]
default-features = false

[target."cfg(not(target_env = \"musl\"))".dependencies.reqwest]
version = "0.11"
features = [
    "blocking",
    "gzip",
    "json",
    "native-tls",
]

[target."cfg(target_env = \"musl\")".dependencies.reqwest]
version = "0.11"
features = [
    "blocking",
    "gzip",
    "json",
    "rustls-tls",
]
default-features = false

[target."cfg(windows)".dependencies.winapi]
version = "0.3"
features = [
    "winsock2",
    "ws2def",
]

[dev-dependencies]
mockito = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release.package."*"]
opt-level = 3

[profile.release.build-override]
opt-level = 0
