bin = [
    { name = "speedtest", path = "src/main.rs" },
    { name = "debug-xml", path = "examples/debug-xml.rs" },
]

[package]
name = "speedtester"
version = "1.0.14"
authors = [
    "Hadi Cahyadi <cumulus13@gmail.com>",
]
edition = "2021"
description = "Command line interface for testing internet bandwidth using speedtest.net"
repository = "https://github.com/cumulus13/speedtest"
license = "Apache-2.0"
keywords = [
    "speedtest",
    "network",
    "bandwidth",
    "cli",
]
categories = [
    "command-line-utilities",
    "network-programming",
]
exclude = [
    "speedtest-v3.sublime-project",
    "speedtest-v3.sublime-workspace",
    "xml-output.txt",
    "temp/",
    "test/",
    "build.bat",
    "FIXES.md",
    "STRUCTURE.txt",
    "TESTING.md",
]

[dependencies]
serde_json = "1.0"
md5 = "0.7"
url = "2.5"
chrono = "0.4"
indicatif = "0.17"
colored = "2.1"
csv = "1.3"
anyhow = "1.0"
thiserror = "1.0"
rayon = "1.8"
crossbeam-channel = "0.5"
num_cpus = "1.16"
local-ip-address = "0.5"
ctrlc = "3.4"
clap-version-flag = "1.0.7"

[dependencies.reqwest]
version = "0.12"
features = [
    "blocking",
    "gzip",
    "json",
]

[dependencies.tokio]
version = "1.35"
features = [
    "full",
]

[dependencies.clap]
version = "4.4"
features = [
    "derive",
]

[dependencies.serde]
version = "1.0"
features = [
    "derive",
]

[dependencies.quick-xml]
version = "0.31"
features = [
    "serialize",
]

[target."cfg(unix)".dependencies]
signal-hook = "0.3"

[target."cfg(windows)".dependencies.winapi]
version = "0.3"
features = [
    "winsock2",
    "ws2def",
    "ws2tcpip",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lib]
name = "speedtest"
path = "src/lib.rs"
